# Redbot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  messages.yaml  pyproject.toml  requirements.txt  settings.py
bot/: __init__.py  books_dict.py  core.py
bot/ui/: channel_control_view.py  modals.py  views.py
database/: connection.py  session_manager.py
database/models/: base.py  mixins.py  session.py
utils/: __init__.py  get_project_settings.py  logging_setup.py  messages.py
